@@ -1,7 +1,10 @@
 package com.example.dittotasks;
 
+import android.Manifest;
 import android.app.AlertDialog;
+import android.content.pm.PackageManager;
 import android.content.res.ColorStateList;
+import android.os.Build;
 import android.os.Bundle;
 import android.util.Log;
 import android.view.View;
@@ -15,24 +18,18 @@ import androidx.appcompat.widget.SwitchCompat;
 import androidx.recyclerview.widget.LinearLayoutManager;
 import androidx.recyclerview.widget.RecyclerView;
 
+import com.ditto.kotlin.Ditto;
+import com.ditto.kotlin.DittoStoreObserver;
+import com.ditto.kotlin.DittoSyncSubscription;
 import com.google.android.material.floatingactionbutton.FloatingActionButton;
 
 import java.util.ArrayList;
+import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
+import java.util.Map;
 import java.util.Objects;
 import java.util.stream.Collectors;
-
-import kotlin.Unit;
-import live.ditto.Ditto;
-import live.ditto.DittoDependencies;
-import live.ditto.DittoError;
-import live.ditto.DittoIdentity;
-import live.ditto.DittoStoreObserver;
-import live.ditto.DittoSyncSubscription;
-import live.ditto.android.DefaultAndroidDittoDependencies;
-import live.ditto.transports.DittoSyncPermissions;
-import live.ditto.transports.DittoTransportConfig;
 
 public class MainActivity extends ComponentActivity {
     private TaskAdapter taskAdapter;
@@ -42,13 +39,9 @@ public class MainActivity extends ComponentActivity {
     DittoSyncSubscription taskSubscription;
     DittoStoreObserver taskObserver;
 
-    private String DITTO_APP_ID = BuildConfig.DITTO_APP_ID;
-    private String DITTO_PLAYGROUND_TOKEN = BuildConfig.DITTO_PLAYGROUND_TOKEN;
-    private String DITTO_AUTH_URL = BuildConfig.DITTO_AUTH_URL;
-    private String DITTO_WEBSOCKET_URL = BuildConfig.DITTO_WEBSOCKET_URL;
-
-    // This is required to be set to false to use the correct URLs
-    private Boolean DITTO_ENABLE_CLOUD_SYNC = true;
+    private final String dittoAppId = BuildConfig.DITTO_APP_ID;
+    private final String dittoPlaygroundToken = BuildConfig.DITTO_PLAYGROUND_TOKEN;
+    private final String dittoAuthUrl = BuildConfig.DITTO_AUTH_URL;
 
     @Override
     protected void onCreate(@Nullable Bundle savedInstanceState) {
@@ -65,10 +58,10 @@ public class MainActivity extends ComponentActivity {
         // Populate connection info (only in debug builds)
         if(BuildConfig.DEBUG) {
             TextView appId = findViewById(R.id.ditto_app_id);
-            appId.setText(String.format("App ID: %s", DITTO_APP_ID));
+            appId.setText(String.format("App ID: %s", dittoAppId));
 
             TextView playgroundToken = findViewById(R.id.ditto_playground_token);
-            playgroundToken.setText(String.format("Playground Token: %s", DITTO_PLAYGROUND_TOKEN));
+            playgroundToken.setText(String.format("Playground Token: %s", dittoPlaygroundToken));
         } else {
             // Hide credential views in production
             findViewById(R.id.ditto_app_id).setVisibility(View.GONE);
@@ -98,22 +91,17 @@ public class MainActivity extends ComponentActivity {
         taskAdapter.setOnTaskLongPressListener(this::showEditTaskModal);
         
         // Initialize empty list - Ditto observer will populate it
-        taskAdapter.setTasks(List.of());
+        taskAdapter.setTasks(Collections.emptyList());
     }
 
 
     void initDitto() {
         Log.d("DittoInit", "=== Starting Ditto initialization ===");
-        
-        // Enable Ditto's internal debug logging (if available)
-        Log.d("DittoInit", "Ditto Logger class not available in this version, using Android Log instead");
-        
-        Log.d("DittoInit", "DITTO_APP_ID: " + DITTO_APP_ID);
-        Log.d("DittoInit", "DITTO_PLAYGROUND_TOKEN: " + (DITTO_PLAYGROUND_TOKEN != null ? "Present" : "NULL"));
-        Log.d("DittoInit", "DITTO_AUTH_URL: " + DITTO_AUTH_URL);
-        Log.d("DittoInit", "DITTO_WEBSOCKET_URL: " + DITTO_WEBSOCKET_URL);
-        Log.d("DittoInit", "DITTO_ENABLE_CLOUD_SYNC: " + DITTO_ENABLE_CLOUD_SYNC);
-        
+
+        Log.d("DittoInit", "DITTO_APP_ID: " + dittoAppId);
+        Log.d("DittoInit", "DITTO_PLAYGROUND_TOKEN: " + (dittoPlaygroundToken != null ? "Present" : "NULL"));
+        Log.d("DittoInit", "DITTO_AUTH_URL: " + dittoAuthUrl);
+
         // Skip permission requests during testing to avoid permission dialogs
         if (!isInstrumentationTest()) {
             Log.d("DittoInit", "Requesting permissions...");
@@ -124,78 +112,43 @@ public class MainActivity extends ComponentActivity {
 
         Log.d("DittoInit", "Starting Ditto SDK initialization...");
         try {
-            Log.d("DittoInit", "Creating AndroidDependencies...");
-            DittoDependencies androidDependencies = new DefaultAndroidDittoDependencies(getApplicationContext());
-            Log.d("DittoInit", "AndroidDependencies created successfully");
-            
-            /*
-             *  Setup Ditto Identity
-             *  https://docs.ditto.live/sdk/latest/install-guides/java#integrating-and-initializing
-             */
-            Log.d("DittoInit", "Creating DittoIdentity.OnlinePlayground...");
-            var identity = new DittoIdentity
-                    .OnlinePlayground(
-                            androidDependencies,
-                            DITTO_APP_ID,
-                            DITTO_PLAYGROUND_TOKEN,
-                            DITTO_ENABLE_CLOUD_SYNC, // This is required to be set to false to use the correct URLs
-                            DITTO_AUTH_URL);
-            Log.d("DittoInit", "DittoIdentity created successfully");
-            
+            // Create Ditto with server connection
+            // https://docs.ditto.live/sdk/latest/install-guides/java#integrating-and-initializing
             Log.d("DittoInit", "Creating Ditto instance...");
-            ditto = new Ditto(androidDependencies, identity);
+            ditto = DittoHelper.createDitto(dittoAppId, dittoAuthUrl);
             Log.d("DittoInit", "Ditto instance created successfully");
 
-            //https://docs.ditto.live/sdk/latest/sync/customizing-transport-configurations
-            Log.d("DittoInit", "Updating transport config...");
-            ditto.updateTransportConfig(config -> {
-                config.getConnect().getWebsocketUrls().add(DITTO_WEBSOCKET_URL);
-
-                // lambda must return Kotlin Unit which corresponds to 'void' in Java
-                return kotlin.Unit.INSTANCE;
-            });
-            Log.d("DittoInit", "Transport config updated");
-
-            // disable sync with v3 peers, required for DQL
-            Log.d("DittoInit", "Disabling sync with v3...");
-            ditto.disableSyncWithV3();
-            Log.d("DittoInit", "Sync with v3 disabled");
-
-            // Disable DQL strict mode
-            // when set to false, collection definitions are no longer required. SELECT queries will return and display all fields by default.
-            // https://docs.ditto.live/dql/strict-mode
-            Log.d("DittoInit", "Setting DQL strict mode to false...");
-            ditto.store.execute("ALTER SYSTEM SET DQL_STRICT_MODE = false");
-            Log.d("DittoInit", "DQL strict mode disabled");
+            // Set up authentication handler (must be set before sync.start())
+            Log.d("DittoInit", "Setting up authentication...");
+            DittoHelper.setupAuth(ditto, dittoPlaygroundToken);
+            Log.d("DittoInit", "Authentication configured");
 
             // register subscription
             // https://docs.ditto.live/sdk/latest/sync/syncing-data#creating-subscriptions
             Log.d("DittoInit", "Registering subscription...");
-            taskSubscription = ditto.sync.registerSubscription("SELECT * FROM tasks");
+            taskSubscription = DittoHelper.registerSubscription(ditto, "SELECT * FROM tasks");
             Log.d("DittoInit", "Subscription registered");
 
             // register observer for live query
             // https://docs.ditto.live/sdk/latest/crud/observing-data-changes#setting-up-store-observers
             Log.d("DittoInit", "Registering observer...");
-            taskObserver = ditto.store.registerObserver("SELECT * FROM tasks WHERE deleted=false ORDER BY title ASC", null, result -> {
-                Log.d("DittoInit", "Observer callback triggered with " + result.getItems().size() + " items");
-                var tasks = result.getItems().stream().map(Task::fromQueryItem).collect(Collectors.toCollection(ArrayList::new));
-                runOnUiThread(() -> {
-                    Log.d("DittoInit", "Updating UI with " + tasks.size() + " tasks");
-                    taskAdapter.setTasks(new ArrayList<>(tasks));
-                });
-                return Unit.INSTANCE;
-            });
+            taskObserver = DittoHelper.registerObserver(ditto,
+                    "SELECT * FROM tasks WHERE deleted=false ORDER BY title ASC",
+                    result -> {
+                        Log.d("DittoInit", "Observer callback triggered with " + result.getItems().size() + " items");
+                        var tasks = result.getItems().stream().map(Task::fromQueryItem).collect(Collectors.toCollection(ArrayList::new));
+                        runOnUiThread(() -> {
+                            Log.d("DittoInit", "Updating UI with " + tasks.size() + " tasks");
+                            taskAdapter.setTasks(new ArrayList<>(tasks));
+                        });
+                    });
             Log.d("DittoInit", "Observer registered");
 
             Log.d("DittoInit", "Starting Ditto sync...");
-            ditto.startSync();
+            DittoHelper.startSync(ditto);
             Log.d("DittoInit", "=== Ditto initialization completed successfully ===");
-        } catch (DittoError e) {
-            Log.e("DittoInit", "DittoError during initialization: " + e.getMessage(), e);
-            e.printStackTrace();
         } catch (Exception e) {
-            Log.e("DittoInit", "Unexpected error during Ditto initialization: " + e.getMessage(), e);
+            Log.e("DittoInit", "Error during Ditto initialization: " + e.getMessage(), e);
             e.printStackTrace();
         }
     }
@@ -213,41 +166,69 @@ public class MainActivity extends ComponentActivity {
     // Request permissions for Ditto
     // https://docs.ditto.live/sdk/latest/install-guides/java#requesting-permissions-at-runtime
     void requestPermissions() {
-        DittoSyncPermissions permissions = new DittoSyncPermissions(this);
-        String[] missing = permissions.missingPermissions(permissions.requiredPermissions());
+        List<String> permissions = new ArrayList<>();
+
+        if (Build.VERSION.SDK_INT >= Build.VERSION_CODES.S) {
+            permissions.add(Manifest.permission.BLUETOOTH_ADVERTISE);
+            permissions.add(Manifest.permission.BLUETOOTH_CONNECT);
+            permissions.add(Manifest.permission.BLUETOOTH_SCAN);
+        }
+        if (Build.VERSION.SDK_INT <= 32) {
+            permissions.add(Manifest.permission.ACCESS_FINE_LOCATION);
+        }
+        if (Build.VERSION.SDK_INT <= 30) {
+            permissions.add(Manifest.permission.ACCESS_COARSE_LOCATION);
+        }
+        if (Build.VERSION.SDK_INT >= Build.VERSION_CODES.TIRAMISU) {
+            permissions.add(Manifest.permission.NEARBY_WIFI_DEVICES);
+        }
+
+        String[] missing = permissions.stream()
+                .filter(p -> checkSelfPermission(p) != PackageManager.PERMISSION_GRANTED)
+                .toArray(String[]::new);
+
         if (missing.length > 0) {
             this.requestPermissions(missing, 0);
         }
     }
 
     private void createTask(String title) {
+        if (ditto == null) {
+            Log.i("MainActivity", "Ditto disabled - create task ignored: " + title);
+            return;
+        }
+
         HashMap<String, Object> task = new HashMap<>();
         task.put("title", title);
         task.put("done", false);
         task.put("deleted", false);
 
-        HashMap<String, Object> args = new HashMap<>();
-        args.put("task", task);
-        try {
+        Map<String, Object> args = Collections.singletonMap("task", task);
 
+        try {
             // Add tasks into the ditto collection using DQL INSERT statement
             // https://docs.ditto.live/sdk/latest/crud/write#inserting-documents
-            ditto.store.execute("INSERT INTO tasks DOCUMENTS (:task)", args);
-        } catch (DittoError e) {
+            DittoHelper.execute(ditto, "INSERT INTO tasks DOCUMENTS (:task)", args);
+        } catch (Exception e) {
             e.printStackTrace();
         }
     }
 
     private void editTaskTitle(Task task, String newTitle) {
-        HashMap<String, Object> args = new HashMap<>();
+        if (ditto == null) {
+            Log.i("MainActivity", "Ditto disabled - edit task ignored: " + task.getTitle());
+            return;
+        }
+
+        Map<String, Object> args = new HashMap<>();
         args.put("id", task.getId());
         args.put("title", newTitle);
 
         try {
             // Update tasks into the ditto collection using DQL UPDATE statement
             // https://docs.ditto.live/sdk/latest/crud/update#updating
-            ditto.store.execute("UPDATE tasks SET title=:title WHERE _id=:id", args);
-        } catch (DittoError e) {
+            DittoHelper.execute(ditto, "UPDATE tasks SET title=:title WHERE _id=:id", args);
+        } catch (Exception e) {
             e.printStackTrace();
         }
     }
@@ -257,16 +238,16 @@ public class MainActivity extends ComponentActivity {
             Log.i("MainActivity", "Ditto disabled - toggle task ignored: " + task.getTitle());
             return;
         }
-        
-        HashMap<String, Object> args = new HashMap<>();
+
+        Map<String, Object> args = new HashMap<>();
         args.put("id", task.getId());
         args.put("done", !task.isDone());
 
         try {
             // Update tasks into the ditto collection using DQL UPDATE statement
             // https://docs.ditto.live/sdk/latest/crud/update#updating
-            ditto.store.execute("UPDATE tasks SET done=:done WHERE _id=:id", args);
-        } catch (DittoError e) {
+            DittoHelper.execute(ditto, "UPDATE tasks SET done=:done WHERE _id=:id", args);
+        } catch (Exception e) {
             e.printStackTrace();
         }
     }
@@ -276,14 +257,14 @@ public class MainActivity extends ComponentActivity {
             Log.i("MainActivity", "Ditto disabled - delete task ignored: " + task.getTitle());
             return;
         }
-        
-        HashMap<String, Object> args = new HashMap<>();
-        args.put("id", task.getId());
+
+        Map<String, Object> args = Collections.singletonMap("id", task.getId());
+
         try {
             // UPDATE DQL Statement using Soft-Delete pattern
             // https://docs.ditto.live/sdk/latest/crud/delete#soft-delete-pattern
-            ditto.store.execute("UPDATE tasks SET deleted=true WHERE _id=:id", args);
-        } catch (DittoError e) {
+            DittoHelper.execute(ditto, "UPDATE tasks SET deleted=true WHERE _id=:id", args);
+        } catch (Exception e) {
             e.printStackTrace();
         }
     }
@@ -293,7 +274,7 @@ public class MainActivity extends ComponentActivity {
             return;
         }
 
-        boolean isSyncActive = ditto.isSyncActive();
+        boolean isSyncActive = DittoHelper.isSyncActive(ditto);
         var nextColor = isSyncActive ? null : ColorStateList.valueOf(0xFFBB86FC);
         var nextText = isSyncActive ? "Sync Inactive" : "Sync Active";
 
@@ -301,14 +282,14 @@ public class MainActivity extends ComponentActivity {
         // https://docs.ditto.live/sdk/latest/sync/start-and-stop-sync
         try {
             if (isSyncActive) {
-                ditto.stopSync();
+                DittoHelper.stopSync(ditto);
             } else {
-                ditto.startSync();
+                DittoHelper.startSync(ditto);
             }
             syncSwitch.setChecked(!isSyncActive);
             syncSwitch.setTrackTintList(nextColor);
             syncSwitch.setText(nextText);
-        } catch (DittoError e) {
+        } catch (Exception e) {
             e.printStackTrace();
         }
     }
